k8s/tempo-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo-external
  namespace: default
spec:
  type: ExternalName
  externalName: ec2-13-61-144-161.eu-north-1.compute.amazonaws.com
  ports:
  - port: 3200
    targetPort: 3200
    protocol: TCP
    name: http
